# SMAIRS

./: .env.development  .env.example  .env.tauri  .eslintrc.override.js  .gitattributes  .gitignore  .lighthouserc.json  .prettierignore  AGENT_STACK.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  Dockerfile  EXPORT_GUIDE.md  LLM_INTEGRATION.md  PHASE1_NEXT_STEPS.md  PHASE_TWO_IMPLEMENTATION_PLAN.md  PROJECT_VISION.md  README.md  SEARCH_FEATURES.md  SECURITY.md  UI_USAGE_GUIDE.md  UI_USAGE_GUIDE_CORRECTED.md  analyze-scenes.js  deployment.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  test-thresholds.js  tooling.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: pull_request_template.md
.smairs/: app.db  cache.json
deployment/: default.conf  health-check.sh  nginx.conf
docs/: ARCHITECTURE.md  CONTRACTS.md  RUNBOOKS.md
filters/: track-changes.lua
scripts/: analyze-candidate.ts  deploy.js  generate-candidates.ts  manuscript-fix.ts  manuscript-validate.ts  perf-baseline.ts  performance-test.js  search-benchmark.ts  tsconfig.json
src/: App.test.tsx  App.tsx  main.tsx  runtime.ts  styles.css  tauriInvoke.ts
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/.smairs/: app.db
src-tauri/capabilities/: main-dev.json
src-tauri/src/: db.rs  docx_processor.py  jobs.rs  lib.rs  main.rs  search.rs  types.rs
src-tauri/src/commands/: analysis.rs  candidates.rs  export.rs  fs.rs  mod.rs  search.rs  version.rs
src-tauri/tests/: db_smoke.rs  search_tantivy.rs
templates/: README.md  memo.md.tmpl  styles.yaml  synopsis.md.tmpl
test-results/: .last-run.json
tests/: analyzer.dialogue.spec.ts  analyzer.spec.ts  anchoring.spec.ts  anchoring.tiers.spec.ts  bridge-generation.spec.ts  bridge-generator.spec.ts  context-analyzer.spec.ts  db.persistence.spec.ts  determinism.spec.ts  diff-engine.test.ts  edit-burden.spec.ts  editor.large.spec.tsx  fixtures.spec.ts  jest-axe.d.ts  opening-candidates.spec.ts  opening-report.spec.ts  performance.benchmark.spec.ts  performance.spec.ts  (+9 more)
(+225 files in other folders)
