[workspace]
members = ["."]
resolver = "2"

[package]
name = "smairs"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tauri = { version = "2.8", features = ["macros", "wry"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"

[dependencies.tauri]
version = "2"
features = [
  # Start with no APIs; will add capabilities incrementally
]

[build-dependencies]
tauri-build = { version = "2", features = [] }
