[workspace]
members = ["."]
resolver = "2"

[package]
name = "smairs"
version = "0.0.0"
edition = "2021"
publish = false
default-run = "smairs"

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
specta = { version = "2.0.0-rc.22", features = ["serde", "export"] }
specta-typescript = "0.0.9"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "generate_types"
path = "src/bin/generate_types.rs"
