[workspace]
members = ["."]
resolver = "2"

[package]
name = "smairs"
version = "0.0.0"
edition = "2021"
publish = false
default-run = "smairs"

[dependencies]
tauri = { version = "2.8", features = ["config-json5"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
specta = { version = "2.0.0-rc.22", features = ["serde", "export", "derive"] }
specta-typescript = "0.0.9"
zip = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
tantivy = { version = "0.22", default-features = true }
once_cell = "1"
regex-lite = "0.1"

[dependencies.zstd]
version = "0.13.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "generate_types"
path = "src/bin/generate_types.rs"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"

